# cpp-sqlite

./: .gitignore  CMakeLists.txt  Makefile
src/: database.cpp  database.hpp  main.cpp
